2015-05-13  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Add support for SMBIOS3 EFI table.
	* dmidecode.c: Fix warnings about comparison between signed and
	  unsigned integers.
	* util.c: Fix warnings about unused labels when building without
	  -DUSE_MMAP.

2015-05-12  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Remove extra blank line after hidden DMI type 40
	  structure.

2015-05-04  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Move table decoding to a separate function.
	* dmidecode.c: Simplify function dmi_table_dump.
	* dmidecode.c: Display types 41 and 42 in quiet mode too.
	* dmidecode.c: Get OEM vendor from System Information (DMI type 1).

2015-04-28  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.h, dmiopt.h: Fix sparse errors.
	* biosdecode.c, dmiopt.c, ownership.c, vpdopt.c: Fix sparse warnings.
	* util.c: Fix sparse warning.

2015-04-27  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Fix --dump-bin when reading from sysfs.

2015-04-27  Jean Delvare  <jdelvare@suse.de>

	Update to support SMBIOS specification version 3.0.0.

	* dmidecode.c: Add support for the new _SM3_ 64-bit entry point
	  defined in the SMBIOS specification version 3.0.0, including
	  support of 64-bit addresses and 32-bit table lengths.
	* dmidecode.c: Add 3 new chassis types (DMI type 3).
	* dmidecode.c: Add 4 new processor families (DMI type 4).
	* dmidecode.c: Add 4 new Intel socket types (DMI type 4).
	* dmidecode.c: Add 13 new slot types (DMI type 9).
	* dmidecode.c: Add 4 new memory device types (DMI type 17).
	* dmidecode.c: Add support for processors with more than 255 cores
	  or threads (DMI type 4).
	* dmidecode.c: Stop decoding v3 tables at End-of-Table marker.

2015-04-21  Roy Franz  <roy.franz@linaro.org>

	* util.c, util.h: Add utility function read_file, which reads an
	  entire binary file into a buffer.
	* dmidecode.c: Add passing of flags parameter to dmi_table.
	* dmidecode.c: Add reading of SMBIOS tables from sysfs.