@@ -5,6 +5,7 @@
 	  unsigned integers.
 	* util.c: Fix warnings about unused labels when building without
 	  -DUSE_MMAP.
+	* dmioem.c: Strip spaces at the end of vendor names.
 
 2015-05-12  Jean Delvare  <jdelvare@suse.de>
 
